--- a/package.json
+++ b/package.json
@@ -10,6 +10,22 @@
     "test": "jest",
     "lint": "eslint ."
   },
+  "lint-staged": {
+    "src/**/*.{js,jsx,json}": [
+      "eslint . --fix",
+      "git add"
+    ],
+    "src/**/*{js,jsx,json}": [
+      "prettier --write ",
+      "git add"
+    ],
+    "*.js": "eslint --cache --fix"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
   "dependencies": {
     "@react-native-community/async-storage": "^1.8.1",
     "@react-native-community/checkbox": "^0.3.0",
@@ -37,7 +53,9 @@
     "@react-native-community/eslint-config": "^0.0.7",
     "babel-jest": "^25.1.0",
     "eslint": "^6.8.0",
+    "husky": "^4.3.0",
     "jest": "^25.1.0",
+    "lint-staged": "^10.5.1",
     "metro-react-native-babel-preset": "^0.58.0",
     "react-test-renderer": "16.9.0"
   },
